[gd_scene load_steps=3 format=3 uid="uid://d2h2axrl0wmlm"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_4q1fd"]
[ext_resource type="Texture2D" uid="uid://cg7n23daireqb" path="res://assets/sprites/sp83logo.png" id="2_1ithn"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4q1fd")

[node name="ScoreLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 80.0

[node name="TimerLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 140.0
offset_bottom = 80.0

[node name="GameTimer" type="Timer" parent="."]

[node name="Node" type="Node" parent="."]

[node name="Sp83Logo" type="Sprite2D" parent="."]
position = Vector2(1070.75, 87.25)
scale = Vector2(0.981618, 0.981618)
texture = ExtResource("2_1ithn")
